y.output
State 90 conflicts: 14 shift/reduce
State 91 conflicts: 14 shift/reduce


Grammar

    0 $accept: Prog $end

    1 Prog: ProgHeading ';' ProgBlock '.'

    2 ProgHeading: PROGRAM ID '(' OUTPUT ')'

    3 ProgBlock: VarPart FuncPart StatPart

    4 VarPart: VAR VarDeclaration ';' repVarPart
    5        | /* empty */

    6 repVarPart: VarDeclaration ';' repVarPart
    7           | /* empty */

    8 VarDeclaration: IDList ':' ID

    9 IDList: ID repIDList

   10 repIDList: ID ',' repIDList
   11          | /* empty */

   12 FuncPart: repFuncPart

   13 repFuncPart: FuncDeclaration ';' repFuncPart
   14            | /* empty */

   15 FuncDeclaration: FuncDecl
   16                | FuncDef
   17                | FuncDef2

   18 FuncDecl: FuncHeading ';' FORWARD

   19 FuncDef: FuncIdent ';' FuncBlock

   20 FuncDef2: FuncHeading ';' FuncBlock

   21 FuncHeading: FUNCTION ID opFuncHeading ':' ID

   22 opFuncHeading: FormalParamList
   23              | /* empty */

   24 FuncIdent: FUNCTION ID

   25 FormalParamList: '(' FormalParams repFormalParamList ')'

   26 repFormalParamList: FormalParams ';' repFormalParamList
   27                   | /* empty */

   28 FormalParams: opFormalParams IDList ':' ID

   29 opFormalParams: VAR
   30               | /* empty */

   31 FuncBlock: VarPart StatPart

   32 StatPart: CompStat

   33 CompStat: BEGIN_ StatList END

   34 StatList: Stat repStat

   35 repStat: repStat ';' Stat
   36        | /* empty */

   37 Stat: CompStat
   38     | IF Expr THEN Stat opStat1
   39     | WHILE Expr DO Stat
   40     | REPEAT StatList UNTIL Expr
   41     | VAL "(" PARAMSTR "(" Expr ")" "," ID ")"
   42     | opStat2
   43     | WRITELN opStat3

   44 opStat1: ELSE Stat
   45        | /* empty */

   46 opStat2: ID ASSIGN Expr
   47        | /* empty */

   48 opStat3: WritelnPList
   49        | /* empty */

   50 WritelnPList: '(' opWritelnPList repWritelnPList ')'

   51 opWritelnPList: Expr
   52               | STRING

   53 repWritelnPList: repWritelnPList ',' opWritelnPList
   54                | /* empty */

   55 Expr: Expr '+' Expr
   56     | Expr '-' Expr
   57     | Expr '*' Expr
   58     | Expr '/' Expr
   59     | Expr '>' Expr
   60     | Expr '<' Expr
   61     | Expr '=' Expr
   62     | Expr GREATEQ Expr
   63     | Expr LESSEQ Expr
   64     | Expr LESSGREAT Expr
   65     | Expr AND Expr
   66     | Expr OR Expr
   67     | Expr MOD Expr
   68     | Expr DIV Expr
   69     | '-' Expr
   70     | '+' Expr
   71     | NOT Expr
   72     | '(' Expr ')'
   73     | INTLIT Expr
   74     | REALLIT Expr
   75     | ID
   76     | ID '(' ParamList ')'

   77 ParamList: '(' Expr repParamList ')'

   78 repParamList: repParamList ',' Expr
   79             | /* empty */


Terminals, with rules where they appear

$end (0) 0
'(' (40) 2 25 50 72 76 77
')' (41) 2 25 50 72 76 77
'*' (42) 57
'+' (43) 55 70
',' (44) 10 53 78
'-' (45) 56 69
'.' (46) 1
'/' (47) 58
':' (58) 8 21 28
';' (59) 1 4 6 13 18 19 20 26 35
'<' (60) 60
'=' (61) 61
'>' (62) 59
error (256)
ASSIGN (258) 46
DO (259) 39
ELSE (260) 44
END (261) 33
FORWARD (262) 18
FUNCTION (263) 21 24
IF (264) 38
NOT (265) 71
OUTPUT (266) 2
PARAMSTR (267) 41
PROGRAM (268) 2
REPEAT (269) 40
THEN (270) 38
UNTIL (271) 40
VAL (272) 41
VAR (273) 4 29
WHILE (274) 39
WRITELN (275) 43
BEGIN_ (276) 33
ID (277) 2 8 9 10 21 24 28 41 46 75 76
INTLIT (278) 73
REALLIT (279) 74
STRING (280) 52
LESSEQ (281) 63
LESSGREAT (282) 64
GREATEQ (283) 62
OR (284) 66
AND (285) 65
MOD (286) 67
DIV (287) 68
IFX (288)
"(" (289) 41
")" (290) 41
"," (291) 41


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
Prog (51)
    on left: 1, on right: 0
ProgHeading (52)
    on left: 2, on right: 1
ProgBlock (53)
    on left: 3, on right: 1
VarPart (54)
    on left: 4 5, on right: 3 31
repVarPart (55)
    on left: 6 7, on right: 4 6
VarDeclaration (56)
    on left: 8, on right: 4 6
IDList (57)
    on left: 9, on right: 8 28
repIDList (58)
    on left: 10 11, on right: 9 10
FuncPart (59)
    on left: 12, on right: 3
repFuncPart (60)
    on left: 13 14, on right: 12 13
FuncDeclaration (61)
    on left: 15 16 17, on right: 13
FuncDecl (62)
    on left: 18, on right: 15
FuncDef (63)
    on left: 19, on right: 16
FuncDef2 (64)
    on left: 20, on right: 17
FuncHeading (65)
    on left: 21, on right: 18 20
opFuncHeading (66)
    on left: 22 23, on right: 21
FuncIdent (67)
    on left: 24, on right: 19
FormalParamList (68)
    on left: 25, on right: 22
repFormalParamList (69)
    on left: 26 27, on right: 25 26
FormalParams (70)
    on left: 28, on right: 25 26
opFormalParams (71)
    on left: 29 30, on right: 28
FuncBlock (72)
    on left: 31, on right: 19 20
StatPart (73)
    on left: 32, on right: 3 31
CompStat (74)
    on left: 33, on right: 32 37
StatList (75)
    on left: 34, on right: 33 40
repStat (76)
    on left: 35 36, on right: 34 35
Stat (77)
    on left: 37 38 39 40 41 42 43, on right: 34 35 38 39 44
opStat1 (78)
    on left: 44 45, on right: 38
opStat2 (79)
    on left: 46 47, on right: 42
opStat3 (80)
    on left: 48 49, on right: 43
WritelnPList (81)
    on left: 50, on right: 48
opWritelnPList (82)
    on left: 51 52, on right: 50 53
repWritelnPList (83)
    on left: 53 54, on right: 50 53
Expr (84)
    on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
    73 74 75 76, on right: 38 39 40 41 46 51 55 56 57 58 59 60 61 62
    63 64 65 66 67 68 69 70 71 72 73 74 77 78
ParamList (85)
    on left: 77, on right: 76
repParamList (86)
    on left: 78 79, on right: 77 78


state 0

    0 $accept: . Prog $end

    PROGRAM  shift, and go to state 1

    Prog         go to state 2
    ProgHeading  go to state 3


state 1

    2 ProgHeading: PROGRAM . ID '(' OUTPUT ')'

    ID  shift, and go to state 4


state 2

    0 $accept: Prog . $end

    $end  shift, and go to state 5


state 3

    1 Prog: ProgHeading . ';' ProgBlock '.'

    ';'  shift, and go to state 6


state 4

    2 ProgHeading: PROGRAM ID . '(' OUTPUT ')'

    '('  shift, and go to state 7


state 5

    0 $accept: Prog $end .

    $default  accept


state 6

    1 Prog: ProgHeading ';' . ProgBlock '.'

    VAR  shift, and go to state 8

    $default  reduce using rule 5 (VarPart)

    ProgBlock  go to state 9
    VarPart    go to state 10


state 7

    2 ProgHeading: PROGRAM ID '(' . OUTPUT ')'

    OUTPUT  shift, and go to state 11


state 8

    4 VarPart: VAR . VarDeclaration ';' repVarPart

    ID  shift, and go to state 12

    VarDeclaration  go to state 13
    IDList          go to state 14


state 9

    1 Prog: ProgHeading ';' ProgBlock . '.'

    '.'  shift, and go to state 15


state 10

    3 ProgBlock: VarPart . FuncPart StatPart

    FUNCTION  shift, and go to state 16

    $default  reduce using rule 14 (repFuncPart)

    FuncPart         go to state 17
    repFuncPart      go to state 18
    FuncDeclaration  go to state 19
    FuncDecl         go to state 20
    FuncDef          go to state 21
    FuncDef2         go to state 22
    FuncHeading      go to state 23
    FuncIdent        go to state 24


state 11

    2 ProgHeading: PROGRAM ID '(' OUTPUT . ')'

    ')'  shift, and go to state 25


state 12

    9 IDList: ID . repIDList

    ID  shift, and go to state 26

    $default  reduce using rule 11 (repIDList)

    repIDList  go to state 27


state 13

    4 VarPart: VAR VarDeclaration . ';' repVarPart

    ';'  shift, and go to state 28


state 14

    8 VarDeclaration: IDList . ':' ID

    ':'  shift, and go to state 29


state 15

    1 Prog: ProgHeading ';' ProgBlock '.' .

    $default  reduce using rule 1 (Prog)


state 16

   21 FuncHeading: FUNCTION . ID opFuncHeading ':' ID
   24 FuncIdent: FUNCTION . ID

    ID  shift, and go to state 30


state 17

    3 ProgBlock: VarPart FuncPart . StatPart

    BEGIN_  shift, and go to state 31

    StatPart  go to state 32
    CompStat  go to state 33


state 18

   12 FuncPart: repFuncPart .

    $default  reduce using rule 12 (FuncPart)


state 19

   13 repFuncPart: FuncDeclaration . ';' repFuncPart

    ';'  shift, and go to state 34


state 20

   15 FuncDeclaration: FuncDecl .

    $default  reduce using rule 15 (FuncDeclaration)


state 21

   16 FuncDeclaration: FuncDef .

    $default  reduce using rule 16 (FuncDeclaration)


state 22

   17 FuncDeclaration: FuncDef2 .

    $default  reduce using rule 17 (FuncDeclaration)


state 23

   18 FuncDecl: FuncHeading . ';' FORWARD
   20 FuncDef2: FuncHeading . ';' FuncBlock

    ';'  shift, and go to state 35


state 24

   19 FuncDef: FuncIdent . ';' FuncBlock

    ';'  shift, and go to state 36


state 25

    2 ProgHeading: PROGRAM ID '(' OUTPUT ')' .

    $default  reduce using rule 2 (ProgHeading)


state 26

   10 repIDList: ID . ',' repIDList

    ','  shift, and go to state 37


state 27

    9 IDList: ID repIDList .

    $default  reduce using rule 9 (IDList)


state 28

    4 VarPart: VAR VarDeclaration ';' . repVarPart

    ID  shift, and go to state 12

    $default  reduce using rule 7 (repVarPart)

    repVarPart      go to state 38
    VarDeclaration  go to state 39
    IDList          go to state 14


state 29

    8 VarDeclaration: IDList ':' . ID

    ID  shift, and go to state 40


state 30

   21 FuncHeading: FUNCTION ID . opFuncHeading ':' ID
   24 FuncIdent: FUNCTION ID .

    '('  shift, and go to state 41

    ';'       reduce using rule 24 (FuncIdent)
    $default  reduce using rule 23 (opFuncHeading)

    opFuncHeading    go to state 42
    FormalParamList  go to state 43


state 31

   33 CompStat: BEGIN_ . StatList END

    IF       shift, and go to state 44
    REPEAT   shift, and go to state 45
    VAL      shift, and go to state 46
    WHILE    shift, and go to state 47
    WRITELN  shift, and go to state 48
    BEGIN_   shift, and go to state 31
    ID       shift, and go to state 49

    $default  reduce using rule 47 (opStat2)

    CompStat  go to state 50
    StatList  go to state 51
    Stat      go to state 52
    opStat2   go to state 53


state 32

    3 ProgBlock: VarPart FuncPart StatPart .

    $default  reduce using rule 3 (ProgBlock)


state 33

   32 StatPart: CompStat .

    $default  reduce using rule 32 (StatPart)


state 34

   13 repFuncPart: FuncDeclaration ';' . repFuncPart

    FUNCTION  shift, and go to state 16

    $default  reduce using rule 14 (repFuncPart)

    repFuncPart      go to state 54
    FuncDeclaration  go to state 19
    FuncDecl         go to state 20
    FuncDef          go to state 21
    FuncDef2         go to state 22
    FuncHeading      go to state 23
    FuncIdent        go to state 24


state 35

   18 FuncDecl: FuncHeading ';' . FORWARD
   20 FuncDef2: FuncHeading ';' . FuncBlock

    FORWARD  shift, and go to state 55
    VAR      shift, and go to state 8

    $default  reduce using rule 5 (VarPart)

    VarPart    go to state 56
    FuncBlock  go to state 57


state 36

   19 FuncDef: FuncIdent ';' . FuncBlock

    VAR  shift, and go to state 8

    $default  reduce using rule 5 (VarPart)

    VarPart    go to state 56
    FuncBlock  go to state 58


state 37

   10 repIDList: ID ',' . repIDList

    ID  shift, and go to state 26

    $default  reduce using rule 11 (repIDList)

    repIDList  go to state 59


state 38

    4 VarPart: VAR VarDeclaration ';' repVarPart .

    $default  reduce using rule 4 (VarPart)


state 39

    6 repVarPart: VarDeclaration . ';' repVarPart

    ';'  shift, and go to state 60


state 40

    8 VarDeclaration: IDList ':' ID .

    $default  reduce using rule 8 (VarDeclaration)


state 41

   25 FormalParamList: '(' . FormalParams repFormalParamList ')'

    VAR  shift, and go to state 61

    $default  reduce using rule 30 (opFormalParams)

    FormalParams    go to state 62
    opFormalParams  go to state 63


state 42

   21 FuncHeading: FUNCTION ID opFuncHeading . ':' ID

    ':'  shift, and go to state 64


state 43

   22 opFuncHeading: FormalParamList .

    $default  reduce using rule 22 (opFuncHeading)


state 44

   38 Stat: IF . Expr THEN Stat opStat1

    NOT      shift, and go to state 65
    ID       shift, and go to state 66
    INTLIT   shift, and go to state 67
    REALLIT  shift, and go to state 68
    '+'      shift, and go to state 69
    '-'      shift, and go to state 70
    '('      shift, and go to state 71

    Expr  go to state 72


state 45

   40 Stat: REPEAT . StatList UNTIL Expr

    IF       shift, and go to state 44
    REPEAT   shift, and go to state 45
    VAL      shift, and go to state 46
    WHILE    shift, and go to state 47
    WRITELN  shift, and go to state 48
    BEGIN_   shift, and go to state 31
    ID       shift, and go to state 49

    $default  reduce using rule 47 (opStat2)

    CompStat  go to state 50
    StatList  go to state 73
    Stat      go to state 52
    opStat2   go to state 53


state 46

   41 Stat: VAL . "(" PARAMSTR "(" Expr ")" "," ID ")"

    "("  shift, and go to state 74


state 47

   39 Stat: WHILE . Expr DO Stat

    NOT      shift, and go to state 65
    ID       shift, and go to state 66
    INTLIT   shift, and go to state 67
    REALLIT  shift, and go to state 68
    '+'      shift, and go to state 69
    '-'      shift, and go to state 70
    '('      shift, and go to state 71

    Expr  go to state 75


state 48

   43 Stat: WRITELN . opStat3

    '('  shift, and go to state 76

    $default  reduce using rule 49 (opStat3)

    opStat3       go to state 77
    WritelnPList  go to state 78


state 49

   46 opStat2: ID . ASSIGN Expr

    ASSIGN  shift, and go to state 79


state 50

   37 Stat: CompStat .

    $default  reduce using rule 37 (Stat)


state 51

   33 CompStat: BEGIN_ StatList . END

    END  shift, and go to state 80


state 52

   34 StatList: Stat . repStat

    $default  reduce using rule 36 (repStat)

    repStat  go to state 81


state 53

   42 Stat: opStat2 .

    $default  reduce using rule 42 (Stat)


state 54

   13 repFuncPart: FuncDeclaration ';' repFuncPart .

    $default  reduce using rule 13 (repFuncPart)


state 55

   18 FuncDecl: FuncHeading ';' FORWARD .

    $default  reduce using rule 18 (FuncDecl)


state 56

   31 FuncBlock: VarPart . StatPart

    BEGIN_  shift, and go to state 31

    StatPart  go to state 82
    CompStat  go to state 33


state 57

   20 FuncDef2: FuncHeading ';' FuncBlock .

    $default  reduce using rule 20 (FuncDef2)


state 58

   19 FuncDef: FuncIdent ';' FuncBlock .

    $default  reduce using rule 19 (FuncDef)


state 59

   10 repIDList: ID ',' repIDList .

    $default  reduce using rule 10 (repIDList)


state 60

    6 repVarPart: VarDeclaration ';' . repVarPart

    ID  shift, and go to state 12

    $default  reduce using rule 7 (repVarPart)

    repVarPart      go to state 83
    VarDeclaration  go to state 39
    IDList          go to state 14


state 61

   29 opFormalParams: VAR .

    $default  reduce using rule 29 (opFormalParams)


state 62

   25 FormalParamList: '(' FormalParams . repFormalParamList ')'

    VAR  shift, and go to state 61

    ID        reduce using rule 30 (opFormalParams)
    $default  reduce using rule 27 (repFormalParamList)

    repFormalParamList  go to state 84
    FormalParams        go to state 85
    opFormalParams      go to state 63


state 63

   28 FormalParams: opFormalParams . IDList ':' ID

    ID  shift, and go to state 12

    IDList  go to state 86


state 64

   21 FuncHeading: FUNCTION ID opFuncHeading ':' . ID

    ID  shift, and go to state 87


state 65

   71 Expr: NOT . Expr

    NOT      shift, and go to state 65
    ID       shift, and go to state 66
    INTLIT   shift, and go to state 67
    REALLIT  shift, and go to state 68
    '+'      shift, and go to state 69
    '-'      shift, and go to state 70
    '('      shift, and go to state 71

    Expr  go to state 88


state 66

   75 Expr: ID .
   76     | ID . '(' ParamList ')'

    '('  shift, and go to state 89

    $default  reduce using rule 75 (Expr)


state 67

   73 Expr: INTLIT . Expr

    NOT      shift, and go to state 65
    ID       shift, and go to state 66
    INTLIT   shift, and go to state 67
    REALLIT  shift, and go to state 68
    '+'      shift, and go to state 69
    '-'      shift, and go to state 70
    '('      shift, and go to state 71

    Expr  go to state 90


state 68

   74 Expr: REALLIT . Expr

    NOT      shift, and go to state 65
    ID       shift, and go to state 66
    INTLIT   shift, and go to state 67
    REALLIT  shift, and go to state 68
    '+'      shift, and go to state 69
    '-'      shift, and go to state 70
    '('      shift, and go to state 71

    Expr  go to state 91


state 69

   70 Expr: '+' . Expr

    NOT      shift, and go to state 65
    ID       shift, and go to state 66
    INTLIT   shift, and go to state 67
    REALLIT  shift, and go to state 68
    '+'      shift, and go to state 69
    '-'      shift, and go to state 70
    '('      shift, and go to state 71

    Expr  go to state 92


state 70

   69 Expr: '-' . Expr

    NOT      shift, and go to state 65
    ID       shift, and go to state 66
    INTLIT   shift, and go to state 67
    REALLIT  shift, and go to state 68
    '+'      shift, and go to state 69
    '-'      shift, and go to state 70
    '('      shift, and go to state 71

    Expr  go to state 93


state 71

   72 Expr: '(' . Expr ')'

    NOT      shift, and go to state 65
    ID       shift, and go to state 66
    INTLIT   shift, and go to state 67
    REALLIT  shift, and go to state 68
    '+'      shift, and go to state 69
    '-'      shift, and go to state 70
    '('      shift, and go to state 71

    Expr  go to state 94


state 72

   38 Stat: IF Expr . THEN Stat opStat1
   55 Expr: Expr . '+' Expr
   56     | Expr . '-' Expr
   57     | Expr . '*' Expr
   58     | Expr . '/' Expr
   59     | Expr . '>' Expr
   60     | Expr . '<' Expr
   61     | Expr . '=' Expr
   62     | Expr . GREATEQ Expr
   63     | Expr . LESSEQ Expr
   64     | Expr . LESSGREAT Expr
   65     | Expr . AND Expr
   66     | Expr . OR Expr
   67     | Expr . MOD Expr
   68     | Expr . DIV Expr

    THEN       shift, and go to state 95
    '>'        shift, and go to state 96
    '<'        shift, and go to state 97
    '='        shift, and go to state 98
    LESSEQ     shift, and go to state 99
    LESSGREAT  shift, and go to state 100
    GREATEQ    shift, and go to state 101
    '+'        shift, and go to state 102
    '-'        shift, and go to state 103
    OR         shift, and go to state 104
    '*'        shift, and go to state 105
    '/'        shift, and go to state 106
    AND        shift, and go to state 107
    MOD        shift, and go to state 108
    DIV        shift, and go to state 109


state 73

   40 Stat: REPEAT StatList . UNTIL Expr

    UNTIL  shift, and go to state 110


state 74

   41 Stat: VAL "(" . PARAMSTR "(" Expr ")" "," ID ")"

    PARAMSTR  shift, and go to state 111


state 75

   39 Stat: WHILE Expr . DO Stat
   55 Expr: Expr . '+' Expr
   56     | Expr . '-' Expr
   57     | Expr . '*' Expr
   58     | Expr . '/' Expr
   59     | Expr . '>' Expr
   60     | Expr . '<' Expr
   61     | Expr . '=' Expr
   62     | Expr . GREATEQ Expr
   63     | Expr . LESSEQ Expr
   64     | Expr . LESSGREAT Expr
   65     | Expr . AND Expr
   66     | Expr . OR Expr
   67     | Expr . MOD Expr
   68     | Expr . DIV Expr

    DO         shift, and go to state 112
    '>'        shift, and go to state 96
    '<'        shift, and go to state 97
    '='        shift, and go to state 98
    LESSEQ     shift, and go to state 99
    LESSGREAT  shift, and go to state 100
    GREATEQ    shift, and go to state 101
    '+'        shift, and go to state 102
    '-'        shift, and go to state 103
    OR         shift, and go to state 104
    '*'        shift, and go to state 105
    '/'        shift, and go to state 106
    AND        shift, and go to state 107
    MOD        shift, and go to state 108
    DIV        shift, and go to state 109


state 76

   50 WritelnPList: '(' . opWritelnPList repWritelnPList ')'

    NOT      shift, and go to state 65
    ID       shift, and go to state 66
    INTLIT   shift, and go to state 67
    REALLIT  shift, and go to state 68
    STRING   shift, and go to state 113
    '+'      shift, and go to state 69
    '-'      shift, and go to state 70
    '('      shift, and go to state 71

    opWritelnPList  go to state 114
    Expr            go to state 115


state 77

   43 Stat: WRITELN opStat3 .

    $default  reduce using rule 43 (Stat)


state 78

   48 opStat3: WritelnPList .

    $default  reduce using rule 48 (opStat3)


state 79

   46 opStat2: ID ASSIGN . Expr

    NOT      shift, and go to state 65
    ID       shift, and go to state 66
    INTLIT   shift, and go to state 67
    REALLIT  shift, and go to state 68
    '+'      shift, and go to state 69
    '-'      shift, and go to state 70
    '('      shift, and go to state 71

    Expr  go to state 116


state 80

   33 CompStat: BEGIN_ StatList END .

    $default  reduce using rule 33 (CompStat)


state 81

   34 StatList: Stat repStat .
   35 repStat: repStat . ';' Stat

    ';'  shift, and go to state 117

    $default  reduce using rule 34 (StatList)


state 82

   31 FuncBlock: VarPart StatPart .

    $default  reduce using rule 31 (FuncBlock)


state 83

    6 repVarPart: VarDeclaration ';' repVarPart .

    $default  reduce using rule 6 (repVarPart)


state 84

   25 FormalParamList: '(' FormalParams repFormalParamList . ')'

    ')'  shift, and go to state 118


state 85

   26 repFormalParamList: FormalParams . ';' repFormalParamList

    ';'  shift, and go to state 119


state 86

   28 FormalParams: opFormalParams IDList . ':' ID

    ':'  shift, and go to state 120


state 87

   21 FuncHeading: FUNCTION ID opFuncHeading ':' ID .

    $default  reduce using rule 21 (FuncHeading)


state 88

   55 Expr: Expr . '+' Expr
   56     | Expr . '-' Expr
   57     | Expr . '*' Expr
   58     | Expr . '/' Expr
   59     | Expr . '>' Expr
   60     | Expr . '<' Expr
   61     | Expr . '=' Expr
   62     | Expr . GREATEQ Expr
   63     | Expr . LESSEQ Expr
   64     | Expr . LESSGREAT Expr
   65     | Expr . AND Expr
   66     | Expr . OR Expr
   67     | Expr . MOD Expr
   68     | Expr . DIV Expr
   71     | NOT Expr .

    $default  reduce using rule 71 (Expr)


state 89

   76 Expr: ID '(' . ParamList ')'

    '('  shift, and go to state 121

    ParamList  go to state 122


state 90

   55 Expr: Expr . '+' Expr
   56     | Expr . '-' Expr
   57     | Expr . '*' Expr
   58     | Expr . '/' Expr
   59     | Expr . '>' Expr
   60     | Expr . '<' Expr
   61     | Expr . '=' Expr
   62     | Expr . GREATEQ Expr
   63     | Expr . LESSEQ Expr
   64     | Expr . LESSGREAT Expr
   65     | Expr . AND Expr
   66     | Expr . OR Expr
   67     | Expr . MOD Expr
   68     | Expr . DIV Expr
   73     | INTLIT Expr .

    '>'        shift, and go to state 96
    '<'        shift, and go to state 97
    '='        shift, and go to state 98
    LESSEQ     shift, and go to state 99
    LESSGREAT  shift, and go to state 100
    GREATEQ    shift, and go to state 101
    '+'        shift, and go to state 102
    '-'        shift, and go to state 103
    OR         shift, and go to state 104
    '*'        shift, and go to state 105
    '/'        shift, and go to state 106
    AND        shift, and go to state 107
    MOD        shift, and go to state 108
    DIV        shift, and go to state 109

    '>'        [reduce using rule 73 (Expr)]
    '<'        [reduce using rule 73 (Expr)]
    '='        [reduce using rule 73 (Expr)]
    LESSEQ     [reduce using rule 73 (Expr)]
    LESSGREAT  [reduce using rule 73 (Expr)]
    GREATEQ    [reduce using rule 73 (Expr)]
    '+'        [reduce using rule 73 (Expr)]
    '-'        [reduce using rule 73 (Expr)]
    OR         [reduce using rule 73 (Expr)]
    '*'        [reduce using rule 73 (Expr)]
    '/'        [reduce using rule 73 (Expr)]
    AND        [reduce using rule 73 (Expr)]
    MOD        [reduce using rule 73 (Expr)]
    DIV        [reduce using rule 73 (Expr)]
    $default   reduce using rule 73 (Expr)


state 91

   55 Expr: Expr . '+' Expr
   56     | Expr . '-' Expr
   57     | Expr . '*' Expr
   58     | Expr . '/' Expr
   59     | Expr . '>' Expr
   60     | Expr . '<' Expr
   61     | Expr . '=' Expr
   62     | Expr . GREATEQ Expr
   63     | Expr . LESSEQ Expr
   64     | Expr . LESSGREAT Expr
   65     | Expr . AND Expr
   66     | Expr . OR Expr
   67     | Expr . MOD Expr
   68     | Expr . DIV Expr
   74     | REALLIT Expr .

    '>'        shift, and go to state 96
    '<'        shift, and go to state 97
    '='        shift, and go to state 98
    LESSEQ     shift, and go to state 99
    LESSGREAT  shift, and go to state 100
    GREATEQ    shift, and go to state 101
    '+'        shift, and go to state 102
    '-'        shift, and go to state 103
    OR         shift, and go to state 104
    '*'        shift, and go to state 105
    '/'        shift, and go to state 106
    AND        shift, and go to state 107
    MOD        shift, and go to state 108
    DIV        shift, and go to state 109
